Add in-project repo.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,30 @@
     <url>http://maven.apache.org</url>
 
 
+    <!-- solution to including local lvg<year>dist.jar library:
+         Installing to a local repo will work if the jar is added for every
+         computer, and the systemPath approach is deprecated. 
+         Instead, create project repo and install each library with :
+         
+         mvn install:install-file -DlocalRepositoryPath=repo -DcreateChecksum=true -Dpackaging=jar -Dfile=./lib/lvg2012dist.jar -DgroupId=gov.nih.nlm -DartifactId=lvgdist -Dversion=2012
+
+         Use the maven-assembly-plugin to include the dependencies from this in-project repo with your target package.
+    -->
+    <repositories>
+        <repository>
+            <id>repo</id>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <url>file://${project.basedir}/repo</url>
+        </repository>
+    </repositories>
+
+
     <build>
         <plugins>
             <plugin>
@@ -35,6 +59,23 @@
                 </configuration>
             </plugin>
       
+<!--            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>-->
+
         </plugins>
     </build>
   
@@ -56,22 +97,66 @@
         </dependency>
     
 
-    <!-- Add using mvn clean install -->
         <dependency>
             <groupId>org.projecthdata</groupId>
             <artifactId>java-hstore</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     
-    <!-- Add using mvn clean install -->
         <dependency>
             <groupId>org.projecthdata</groupId>
             <artifactId>hdata-schemas</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     
-    
-    
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2-alpha2-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.6.4</version>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.6.4</version> <!-- test to 1.9.3 -->
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6.2</version>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>gov.nih.nlm</groupId>
+            <artifactId>lvgdist</artifactId>
+            <version>2012</version>
+            <type>jar</type>
+        </dependency>
+        
     </dependencies>
   
   
