--- a/pom.xml
+++ b/pom.xml
@@ -223,8 +223,13 @@
             <version>8.7</version>
             <type>jar</type>
         </dependency>
-            
-        
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.6</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
   
   
